Style main page to support verticle button placement.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <div id="sidebar">
-      <div>
-        <span>Z</span>
-        <span>R</span>
+      <div id="initials">
+        <span id="initial-z">Z</span>
+        <span id="initial-r">R</span>
       </div>
-      <div id=tabs>
-        <button class="tab" onclick="openTab(event, 'about')">About</button>
-        <button class="tab" onclick="openTab(event, 'work')">Work</button>
-      </div>
+      <button class="tab-button" onclick="openTab(event, 'about')">About</button>
+      <button class="tab-button" onclick="openTab(event, 'work')">Work</button>
     </div>
 
     <div id="content">
