Add support for tab buttons to main page.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,7 +12,7 @@
         <span id="initial-z">Z</span>
         <span id="initial-r">R</span>
       </div>
-      <button class="tab-button" onclick="openTab(event, 'about')">About</button>
+      <button class="tab-button open" onclick="openTab(event, 'about')">About</button>
       <button class="tab-button" onclick="openTab(event, 'work')">Work</button>
     </div>
 
