--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&family=Roboto+Mono&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
     <script src="script.js"></script>
   </head>
   <body>
@@ -19,6 +20,7 @@
     <div id="content">
       <div id="about" class="tab-content">
         <h1>About</h1>
+        <hr>
         <p>This is my portfolio.</p>
         <p>I am a rising sophomore at UC Irvine who is currently serving as a STEP Intern at Google! =)</p>
         <img src="/images/cat.png">
@@ -29,8 +31,14 @@
 
       <div id="work" class="tab-content">
         <h1>My Work</h1>
+        <hr>
         <h2>Programming</h2>
-        <h3>Porfolio Site</h3>
+        <h3>
+          Porfolio Site
+          <span class="tool html-tag">html</span>
+          <span class="tool css-tag">css</span>
+          <span class="tool javascript-tag">javascript</span>
+        </h3>
         <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
       </div>
 
