Update Work tab to Projects. Add Experience tab.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,8 @@
         <span id="initial-r">R</span>
       </div>
       <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
-      <button class="tab-button" onclick="openTab(event, 'work')">Work</button>
+      <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
+      <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
     </div>
 
     <div id="content">
@@ -29,8 +30,8 @@
         <div id="greeting-container"></div>
       </div>
 
-      <div id="work" class="tab-content">
-        <h1>My Work</h1>
+      <div id="projects" class="tab-content">
+        <h1>My Projects</h1>
         <hr>
         <h2>Programming</h2>
         <h3>
@@ -41,6 +42,13 @@
         </h3>
         <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
       </div>
+
+      <div id="experience" class="tab-content">
+        <h1>Experience</h1>
+        <hr>
+        <h3>Google STEP Intern</h3>
+        <span class="subtitle">&#62; 15 Jun 2020 - Present</span>
+        <p>I am currently serving as a STEP Intern at Google!</p>
 
       <script>defaultTab();</script>
     </div>
