--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,6 +16,11 @@
       <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
       <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
       <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
+      <div id="media-links">
+        <a href="https://github.com/zrideaux"><img src="/images/GitHub-Mark-Light-120px.png" alt="GitHub"></a>
+        <a href="#"><img src="/images/LI-In-Bug.png" alt="LinkedIn"></a>
+
+      </div>
     </div>
 
     <div id="content">
