--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -25,10 +25,16 @@
 
     <div id="content">
       <div id="about" class="tab-content">
-        <h1>About</h1>
+        <h1>About Me</h1>
         <hr>
-        <p>This is my portfolio.</p>
-        <p>I am a rising sophomore at UC Irvine who is currently serving as a STEP Intern at Google! =)</p>
+        <h3>Welcome to My Portfolio!</h3>
+        <p>Welcome! I am a California-based computer science student at UC Irvine with a passion for creating! I have always loved to make things to help or entertain others, meaning that I have had a lot of time to expose myself to a number of creative tools, mediums, and practices.</p>
+        <p>On this site, you can find a few examples of my work, read about some of my career experiences, and find some information on where to find me! Here are a few highlights:</p>
+        <ul>
+          <li>I'm serving as a STEP intern at Google. Last year I was chosen to participate in Google's CSSI program.</li> 
+          <li>I've created videos and graphics for livestreamers that have drawn millions of views.</li> 
+        </ul>
+        <hr>
         <img src="/images/cat.png">
         <p>Click here to get a random message:</p>
         <button onclick="addRandomGreeting()">Hello</button>
@@ -45,16 +51,33 @@
           <span class="tool css-tag">css</span>
           <span class="tool javascript-tag">javascript</span>
         </h3>
+
         <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
       </div>
 
       <div id="experience" class="tab-content">
         <h1>Experience</h1>
         <hr>
-        <h3>Google STEP Intern</h3>
+        <h3>Google STEP Intern
+          <span class="tool html-tag">html</span>
+          <span class="tool css-tag">css</span>
+          <span class="tool javascript-tag">javascript</span>
+          <span class="tool appengine-tag">app engine</span>
+
+
+        </h3>
         <span class="subtitle">&#62; 15 Jun 2020 - Present</span>
         <p>I am currently serving as a STEP Intern at Google!</p>
 
+        <h3>
+          Google CSSI Alum
+          <span class="tool html-tag">html</span>
+          <span class="tool css-tag">css</span>
+          <span class="tool python-tag">python</span>
+          <span class="tool appengine-tag">app engine</span>
+        </h3>
+        <span class="subtitle">&#62; 14 Jul 2019 - 03 Aug 2019</span>
+        <p>I was chosen to participate in Google's Computer Science Summer Institute program in the summer of 2019!</p>
       <script>defaultTab();</script>
     </div>
   </body>
