Update body content on index.html.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,13 +28,14 @@
         <h1>About Me</h1>
         <hr>
         <h3>Welcome to My Portfolio!</h3>
-        <p>Welcome! I am a California-based computer science student at UC Irvine with a passion for creating! I have always loved to make things to help or entertain others, meaning that I have had a lot of time to expose myself to a number of creative tools, mediums, and practices.</p>
+        <p>Hello! I am a California-based computer science student at UC Irvine with a passion for creating! I have always loved to make things to help or entertain others, meaning that I have had a lot of time to expose myself to a number of creative tools, mediums, and practices.</p>
         <p>On this site, you can find a few examples of my work, read about some of my career experiences, and find some information on where to find me! Here are a few highlights:</p>
         <ul>
-          <li>I'm serving as a STEP intern at Google. Last year I was chosen to participate in Google's CSSI program.</li> 
-          <li>I've created videos and graphics for livestreamers that have drawn millions of views.</li> 
+          <li>I'm currently serving as a STEP intern at Google. Last year I was chosen to participate in Google's CSSI program.</li> 
+          <li>I've created videos and graphics for livestreamers which have drawn millions of views.</li> 
         </ul>
         <hr>
+        <p>Check out the Projects and Experience tabs to the left to learn about my work in more detail!</p>
         <img src="/images/cat.png">
         <p>Click here to get a random message:</p>
         <button onclick="addRandomGreeting()">Hello</button>
@@ -50,6 +51,7 @@
           <span class="tool html-tag">html</span>
           <span class="tool css-tag">css</span>
           <span class="tool javascript-tag">javascript</span>
+          <span class="tool appengine-tag">app engine</span>
         </h3>
 
         <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
