Add body content, rearrange tabs, and implement minor style changes.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,8 +14,8 @@
         <span id="initial-r">R</span>
       </div>
       <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
-      <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
       <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
+      <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
       <div id="media-links">
         <a href="https://github.com/zrideaux"><img src="/images/GitHub-Mark-Light-120px.png" alt="GitHub"></a>
         <a href="#"><img src="/images/LI-In-Bug.png" alt="LinkedIn"></a>
@@ -28,28 +28,13 @@
         <h1>About Me</h1>
         <hr>
         <h3>Welcome to My Portfolio!</h3>
-        <p>Hello! I am a California-based computer science student at UC Irvine with a passion for creating! I have always loved to make things to help or entertain others, meaning that I have had a lot of time to expose myself to a number of creative tools, mediums, and practices.</p>
+        <p>Hello! I am a California-based computer science student at UC Irvine with a passion for creating! I have always loved to make things that help or entertain others, meaning that I have had a lot of time to expose myself to a number of creative tools, mediums, and practices.</p>
         <p>On this site, you can find a few examples of my work, read about some of my career experiences, and find some information on where to find me! Here are a few highlights:</p>
         <ul>
-          <li>I'm currently serving as a STEP intern at Google. Last year I was chosen to participate in Google's CSSI program.</li> 
+          <li>I'm currently serving as a STEP intern at Google! Last year I was chosen to participate in Google's CSSI program.</li> 
           <li>I've created videos and graphics for livestreamers which have drawn millions of views.</li> 
         </ul>
-        <p>Check out the Projects and Experience tabs to the left to learn about my work in more detail!</p>
-      </div>
-
-      <div id="projects" class="tab-content">
-        <h1>My Projects</h1>
-        <hr>
-        <h2>Programming</h2>
-        <h3>
-          Porfolio Site
-          <span class="tool html-tag">html</span>
-          <span class="tool css-tag">css</span>
-          <span class="tool javascript-tag">javascript</span>
-          <span class="tool appengine-tag">app engine</span>
-        </h3>
-
-        <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
+        <p>Check out the Projects and Experience tabs to learn about my work in more detail!</p>
       </div>
 
       <div id="experience" class="tab-content">
@@ -74,8 +59,42 @@
           <span class="tool appengine-tag">app engine</span>
         </h3>
         <span class="subtitle">&#62; 14 Jul 2019 - 03 Aug 2019</span>
-        <p>I was chosen to participate in Google's Computer Science Summer Institute program in the summer of 2019!</p>
-      <script>defaultTab();</script>
+        <p>I was chosen to participate in Google's Computer Science Summer Institute program in the summer of 2019! During CSSI I was able to work with a host of Googlers to become familiar with several technologies crucial to web development. I also got the opportunity to work with a small team to create an original webapp and experienced Google culture for the first time!</p>
+
+        <h3>
+          Digital Learning Student Technology Consultant @ UC Irvine 
+          <span class="tool premierepro-tag">premiere pro</span>
+          <span class="tool html-tag">html</span>
+        </h3>
+        <span class="subtitle">&#62; Feb 2020 - Jun 2020</span>
+        <p>I serve as a video editor for UC Irvine's Department of Teaching Excellence and Innovation. In this role I help produce lecture materials for hybrid and online college courses. In addition to editing, I have also had the opportunity to interact with course material more directly, such as assisting staff with course websites.</p>
+        
+        <h3>
+          Freelance Video Editor and Graphic Designer 
+          <span class="tool premierepro-tag">premiere pro</span>
+          <span class="tool photoshop-tag">photoshop</span>
+          <span class="tool aftereffects-tag">after effects</span>
+          <span class="tool illustrator-tag">illustrator</span>
+        </h3>
+        <span class="subtitle">&#62; 2015 - 15 Jun 2020</span>
+        <p>Over the past few years, I have done a plethora of recurring and one-off jobs as a video editor and graphic designer for various online personalities. In the process, I've developed proficiency with Adobe creative software and have created content that has drawn in several million views.</p>
+      </div>
+
+      <div id="projects" class="tab-content">
+        <h1>Current Projects</h1>
+        <hr>
+        <h2>Programming</h2>
+        <h3>
+          Porfolio Site
+          <span class="tool html-tag">html</span>
+          <span class="tool css-tag">css</span>
+          <span class="tool javascript-tag">javascript</span>
+          <span class="tool appengine-tag">app engine</span>
+        </h3>
+
+        <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
+      </div>
+    <script>defaultTab();</script>
     </div>
   </body>
 </html>
