--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,9 +13,11 @@
         <span id="initial-z">Z</span>
         <span id="initial-r">R</span>
       </div>
-      <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
-      <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
-      <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
+      <div id="buttons">
+        <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
+        <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
+        <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
+      </div>
       <div id="media-links">
         <a href="https://github.com/zrideaux"><img src="/images/GitHub-Mark-Light-120px.png" alt="GitHub"></a>
         <a href="#"><img src="/images/LI-In-Bug.png" alt="LinkedIn"></a>
