--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,7 +13,7 @@
         <span id="initial-z">Z</span>
         <span id="initial-r">R</span>
       </div>
-      <div id="buttons">
+      <div id="sidebar-buttons">
         <button id="default-tab" class="tab-button open" onclick="openTab(event, 'about')">About</button>
         <button class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
         <button class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
@@ -21,7 +21,6 @@
       <div id="media-links">
         <a href="https://github.com/zrideaux"><img src="/images/GitHub-Mark-Light-120px.png" alt="GitHub"></a>
         <a href="#"><img src="/images/LI-In-Bug.png" alt="LinkedIn"></a>
-
       </div>
     </div>
 
@@ -47,8 +46,6 @@
           <span class="tool css-tag">css</span>
           <span class="tool javascript-tag">javascript</span>
           <span class="tool appengine-tag">app engine</span>
-
-
         </h3>
         <span class="subtitle">&#62; 15 Jun 2020 - Present</span>
         <p>I am currently serving as a STEP Intern at Google!</p>
