Add front end admin check and update login link system.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -107,7 +107,7 @@
       <div id="comments" class="tab-content">
         <h1>Comments</h1>
         <hr>
-        <p>You can leave a comment here!</p> 
+        <p>You can leave a comment here! <a id="login-link" href="#">Sign In</a><a id="logout-link" href="#">Sign Out</a></p> 
         
         <div id="comment-form">
           <label>Name</label>
