Remove server tab and update portfolio project information.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,7 +17,6 @@
         <button id="about-tab" class="tab-button" onclick="openTab(event, 'about')">About</button>
         <button id="experience-tab" class="tab-button" onclick="openTab(event, 'experience')">Experience</button>
         <button id="projects-tab" class="tab-button" onclick="openTab(event, 'projects')">Projects</button>
-        <button id="server-tab" class="tab-button" onclick="openTab(event, 'server')">Server</button>
         <button id="comments-tab" class="tab-button" onclick="openTab(event, 'comments')">Comments</button>
       </div>
       <div id="media-links">
@@ -88,20 +87,14 @@
         <h2>Programming</h2>
         <h3>
           Porfolio Site
+          <span class="tool javascript-tag">javascript</span>
+          <span class="tool java-tag">java</span>
           <span class="tool html-tag">html</span>
           <span class="tool css-tag">css</span>
-          <span class="tool javascript-tag">javascript</span>
           <span class="tool appengine-tag">app engine</span>
         </h3>
 
         <p>Using a combination of several technologies I am creating an interactive portfolio site as one of my Google STEP Intern starter projects.
-      </div>
-
-      <div id="server" class="tab-content">
-        <h1>Server</h1>
-        <hr>
-        <p class="subtitle">This page is used to display information from the servlet.</p>
-        <ul id="json-messages"><ul>
       </div>
 
       <div id="comments" class="tab-content">
