--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -128,6 +128,11 @@
             <option value="20">20 Comments</option>
             <option value="-1">All Comments</option>
           </select>
+          <label>Language:</label>
+          <select name="language" id="language-of-comments" onchange="getCommentsFromServlet();" placeholder="ex. 5" arialabel="The language of comments to display."> 
+            <option value="en" selected="selected">English</option>
+            <option value="es">Spanish</option>
+          </select>
           <button id="delete-all" onclick="deleteAllComments();">Delete All Comments</button>
         </div>
         <ul id="comment-section"></ul>
