Add support for dismissible notifications and convert existing error alerts.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -111,6 +111,7 @@
           <button id="input-submit" onclick="addComment();">Submit</button>
           <script>generateCommentForm();</script>
         </div>
+        <div id="alerts-section"></div>
 
         <div id="comment-actions">
           <label>Comments Displayed:</label>
