Add aria-label to alert dismiss button and fix existing aria-labels.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -115,14 +115,14 @@
 
         <div id="comment-actions">
           <label>Comments Displayed:</label>
-          <select name="show" id="number-of-comments" type="number" onchange="getCommentsFromServlet();" placeholder="ex. 5" arialabel="The number of comments to display."> 
+          <select name="show" id="number-of-comments" type="number" onchange="getCommentsFromServlet();" placeholder="ex. 5" aria-label="The number of comments to display."> 
             <option value="5" selected="selected">5 Comments</option>
             <option value="10">10 Comments</option>
             <option value="20">20 Comments</option>
             <option value="-1">All Comments</option>
           </select>
           <label>Language:</label>
-          <select name="language" id="language-of-comments" onchange="getCommentsFromServlet();" placeholder="ex. 5" arialabel="The language of comments to display."> 
+          <select name="language" id="language-of-comments" onchange="getCommentsFromServlet();" placeholder="ex. 5" aria-label="The language of comments to display."> 
             <option value="en" selected="selected">English</option>
             <option value="zh">Chinese</option>
             <option value="es">Spanish</option>
